--- a/core/package.json
+++ b/core/package.json
@@ -2,10 +2,10 @@
     "name": "god",
     "version": "1.0.0",
     "description": "",
-    "main": "index.js",
+    "main": "server.js",
     "scripts": {
-        "start": "node dist/index.js",
-        "dev": "nodemon --exec 'ts-node' src/index.ts",
+        "start": "node dist/server.js",
+        "dev": "nodemon --exec 'ts-node' src/server.ts",
         "lint": "eslint src/**/*.ts",
         "lint:fix": "eslint src/**/*.ts --fix",
         "build": "tsc -p ."
@@ -16,13 +16,14 @@
     "dependencies": {
         "cors": "^2.8.5",
         "dockerode": "^4.0.0",
-        "dotenv": "^16.3.1",
         "express": "^4.18.2"
     },
     "devDependencies": {
+        "@types/express": "^4.17.21",
         "@types/node": "^20.9.0",
         "@typescript-eslint/eslint-plugin": "^6.10.0",
         "@typescript-eslint/parser": "^6.10.0",
+        "dotenv": "^16.3.1",
         "eslint": "^8.53.0",
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-import": "^2.29.0",
