--- a/core/package.json
+++ b/core/package.json
@@ -14,12 +14,18 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "compression": "^1.7.4",
         "cors": "^2.8.5",
         "dockerode": "^4.0.0",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "helmet": "^7.1.0",
+        "morgan": "^1.10.0"
     },
     "devDependencies": {
+        "@types/compression": "^1.7.5",
+        "@types/cookie-parser": "^1.4.6",
         "@types/express": "^4.17.21",
+        "@types/morgan": "^1.9.9",
         "@types/node": "^20.9.0",
         "@typescript-eslint/eslint-plugin": "^6.10.0",
         "@typescript-eslint/parser": "^6.10.0",
