--- a/core/package.json
+++ b/core/package.json
@@ -14,13 +14,15 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@types/dockerode": "^3.3.23",
         "compression": "^1.7.4",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dockerode": "^4.0.0",
         "express": "^4.18.2",
         "helmet": "^7.1.0",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "ts-pattern": "^5.0.5"
     },
     "devDependencies": {
         "@types/compression": "^1.7.5",
