--- a/core/package.json
+++ b/core/package.json
@@ -5,7 +5,7 @@
     "main": "server.js",
     "scripts": {
         "start": "node dist/server.js",
-        "dev": "nodemon --exec 'ts-node' src/server.ts",
+        "dev": "nodemon --watch 'src/**/*.ts' --exec tsx src/server.ts",
         "lint": "eslint src/**/*.ts",
         "lint:fix": "eslint src/**/*.ts --fix",
         "build": "tsc -p ."
@@ -18,15 +18,20 @@
         "compression": "^1.7.4",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
+        "cross-fetch": "^4.0.0",
         "dockerode": "^4.0.0",
+        "eventsource": "^2.0.2",
         "express": "^4.18.2",
         "helmet": "^7.1.0",
         "morgan": "^1.10.0",
+        "pocketbase": "^0.19.0",
+        "redis": "^4.6.10",
         "ts-pattern": "^5.0.5"
     },
     "devDependencies": {
         "@types/compression": "^1.7.5",
         "@types/cookie-parser": "^1.4.6",
+        "@types/eventsource": "^1.1.15",
         "@types/express": "^4.17.21",
         "@types/morgan": "^1.9.9",
         "@types/node": "^20.9.0",
@@ -40,6 +45,8 @@
         "nodemon": "^3.0.1",
         "prettier": "^3.0.3",
         "ts-node": "^10.9.1",
+        "tsx": "^4.1.0",
         "typescript": "^5.2.2"
-    }
+    },
+    "type": "module"
 }
